# TylerD

./: .buildinfo  .gitignore  CHANGELOG.md  Makefile  changelog.html  dependencies.html  gamelist.html  genindex.html  index.html  nes_graphs.html  objects.inv  overview.html  pyproject.toml  requirements_dev_licenses.html  requirements_licenses.html  results.html  results_a.html  results_b.html  results_c.html  results_d.html  results_e.html  results_f.html  results_g.html  results_h.html  results_i.html  results_j.html  results_k.html  results_l.html  results_m.html  results_n.html  results_o.html  results_p.html  results_q.html  results_r.html  results_s.html  results_t.html  results_u.html  results_v.html  results_w.html  results_x.html  (+6 more)
_sources/: gamelist.rst.txt  index.rst.txt  overview.rst.txt  requirements_licenses.rst.txt  results.rst.txt  results_a.rst.txt  results_b.rst.txt  results_c.rst.txt  results_d.rst.txt  results_e.rst.txt  results_f.rst.txt  results_g.rst.txt  results_h.rst.txt  results_i.rst.txt  results_j.rst.txt  results_k.rst.txt  results_l.rst.txt  results_m.rst.txt  results_n.rst.txt  results_o.rst.txt  results_p.rst.txt  results_q.rst.txt  results_r.rst.txt  results_s.rst.txt  results_t.rst.txt  results_u.rst.txt  results_v.rst.txt  results_w.rst.txt  results_x.rst.txt  results_y.rst.txt  results_z.rst.txt  test.rst.txt
docs/: .gitignore  changelog.rst  conf.py  index.rst  nes_graphs.rst  requirements_dev_licenses.rst
scripts/: compare.py  download_assets.py  emulator_screen.py  generate_report.py  generate_source.py
tylerd/: __init__.py  (+4 more)
(+11 files in other folders)
